crates/pg_syntax/tests/snapshots/postgres_regress/rangetypes@233.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "insert into test_range_spgist select 'empty'::int4range from generate_series(1,500) g;"
---
InsertStmt@0..86
  Insert@0..6 "insert"
  Whitespace@6..7 " "
  Into@7..11 "into"
  Whitespace@11..12 " "
  RangeVar@12..29
    Ident@12..29 "test_range_spgist"
  Whitespace@29..30 " "
  SelectStmt@30..85
    Select@30..36 "select"
    Whitespace@36..37 " "
    ResTarget@37..55
      TypeCast@37..55
        AConst@37..44
          Sconst@37..44 "'empty'"
        Typecast@44..46 "::"
        TypeName@46..55
          Ident@46..55 "int4range"
    Whitespace@55..56 " "
    From@56..60 "from"
    Whitespace@60..61 " "
    RangeFunction@61..85
      List@61..82
        FuncCall@61..82
          Ident@61..76 "generate_series"
          Ascii40@76..77 "("
          AConst@77..78
            Iconst@77..78 "1"
          Ascii44@78..79 ","
          AConst@79..82
            Iconst@79..82 "500"
      Ascii41@82..83 ")"
      Whitespace@83..84 " "
      Alias@84..85
        Ident@84..85 "g"
  Ascii59@85..86 ";"

