crates/pg_syntax/tests/snapshots/postgres_regress/rangetypes@236.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "insert into test_range_spgist select int4range(NULL,g*10,'(]') from generate_series(1,100) g;"
---
InsertStmt@0..93
  Insert@0..6 "insert"
  Whitespace@6..7 " "
  Into@7..11 "into"
  Whitespace@11..12 " "
  RangeVar@12..29
    Ident@12..29 "test_range_spgist"
  Whitespace@29..30 " "
  SelectStmt@30..92
    Select@30..36 "select"
    Whitespace@36..37 " "
    ResTarget@37..61
      FuncCall@37..61
        Ident@37..46 "int4range"
        Ascii40@46..47 "("
        AConst@47..51
          NullP@47..51 "NULL"
        Ascii44@51..52 ","
        AExpr@52..56
          ColumnRef@52..53
            Ident@52..53 "g"
          Ascii42@53..54 "*"
          AConst@54..56
            Iconst@54..56 "10"
        Ascii44@56..57 ","
        AConst@57..61
          Sconst@57..61 "'(]'"
    Ascii41@61..62 ")"
    Whitespace@62..63 " "
    From@63..67 "from"
    Whitespace@67..68 " "
    RangeFunction@68..92
      List@68..89
        FuncCall@68..89
          Ident@68..83 "generate_series"
          Ascii40@83..84 "("
          AConst@84..85
            Iconst@84..85 "1"
          Ascii44@85..86 ","
          AConst@86..89
            Iconst@86..89 "100"
      Ascii41@89..90 ")"
      Whitespace@90..91 " "
      Alias@91..92
        Ident@91..92 "g"
  Ascii59@92..93 ";"

