crates/pg_syntax/tests/snapshots/postgres_regress/rangetypes@237.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "insert into test_range_spgist select int4range(g*10,NULL,'(]') from generate_series(1,100) g;"
---
InsertStmt@0..93
  Insert@0..6 "insert"
  Whitespace@6..7 " "
  Into@7..11 "into"
  Whitespace@11..12 " "
  RangeVar@12..29
    Ident@12..29 "test_range_spgist"
  Whitespace@29..30 " "
  SelectStmt@30..92
    Select@30..36 "select"
    Whitespace@36..37 " "
    ResTarget@37..61
      FuncCall@37..61
        Ident@37..46 "int4range"
        Ascii40@46..47 "("
        AExpr@47..51
          ColumnRef@47..48
            Ident@47..48 "g"
          Ascii42@48..49 "*"
          AConst@49..51
            Iconst@49..51 "10"
        Ascii44@51..52 ","
        AConst@52..56
          NullP@52..56 "NULL"
        Ascii44@56..57 ","
        AConst@57..61
          Sconst@57..61 "'(]'"
    Ascii41@61..62 ")"
    Whitespace@62..63 " "
    From@63..67 "from"
    Whitespace@67..68 " "
    RangeFunction@68..92
      List@68..89
        FuncCall@68..89
          Ident@68..83 "generate_series"
          Ascii40@83..84 "("
          AConst@84..85
            Iconst@84..85 "1"
          Ascii44@85..86 ","
          AConst@86..89
            Iconst@86..89 "100"
      Ascii41@89..90 ")"
      Whitespace@90..91 " "
      Alias@91..92
        Ident@91..92 "g"
  Ascii59@92..93 ";"

